--- a/templates/student_Registration.html
+++ b/templates/student_Registration.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 {% load static %}
+{% load crispy_forms_tags %}
 <html lang="en">
 
 <head>
@@ -54,28 +55,39 @@
                             </a>
                             <h3>Sign Up</h3>
                         </div>
-                        <div class="form-floating mb-3">
-                            <input type="text" class="form-control" id="floatingText" placeholder="jhondoe">
-                            <label for="floatingText">Username</label>
-                        </div>
-                        <div class="form-floating mb-3">
-                            <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-                            <label for="floatingInput">Email address</label>
-                        </div>
+                        <form method="post">{% csrf_token %}
+
+
+
+
+<!--                        <div class="form-floating mb-3">-->
+<!--                            <input type="text" class="form-control" id="floatingText" placeholder="jhondoe">-->
+<!--                            <label for="floatingText">Username</label>-->
+<!--                        </div>-->
+<!--                        <div class="form-floating mb-3">-->
+<!--                            <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">-->
+<!--                            <label for="floatingInput">Email address</label>-->
+<!--                        </div>-->
                         <div class="form-floating mb-4">
-                            <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-                            <label for="floatingPassword">Password</label>
-                        </div>
-                        <div class="d-flex align-items-center justify-content-between mb-4">
-                            <div class="form-check">
-                                <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                                <label class="form-check-label" for="exampleCheck1">Check me out</label>
-                            </div>
-                            <a href="">Forgot Password</a>
-                        </div>
+                            {{student_form|crispy}}
+                            {{login_form|crispy}}
+<!--                            <input type="password" class="form-control" id="floatingPassword" placeholder="Password">-->
+<!--                            <label for="floatingPassword">Password</label>-->
+<!--                        </div>-->
+<!--                        <div class="d-flex align-items-center justify-content-between mb-4">-->
+<!--                            <div class="form-check">-->
+<!--                                <input type="checkbox" class="form-check-input" id="exampleCheck1">-->
+<!--                                <label class="form-check-label" for="exampleCheck1">Check me out</label>-->
+<!--                            </div>-->
+<!--                            <a href="">Forgot Password</a>-->
+<!--                        </div>-->
                         <button type="submit" class="btn btn-primary py-3 w-100 mb-4">Sign Up</button>
-                        <p class="text-center mb-0">Already have an Account? <a href="">Sign In</a></p>
+
+                        <p class="text-center mb-0">Already have an Account? <a href="{% url 'login' %}">Sign In</a></p>
+                        </form>
                     </div>
+                    </div>
+
                 </div>
             </div>
         </div>
