--- a/templates/admin_temp/add_hostel.html
+++ b/templates/admin_temp/add_hostel.html
@@ -1,4 +1,4 @@
-{% extends 'admin_home.html' %}
+{% extends 'admin_temp/admin_home.html' %}
 {% block content %}
 {% load static %}
 {% load crispy_forms_tags %}
