--- a/templates/parent_Registration.html
+++ b/templates/parent_Registration.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 {% load static %}
+{% load crispy_forms_tags %}
 <html lang="en">
 
 <head>
@@ -29,7 +30,7 @@
     <link href="{% static 'assets1/css/bootstrap.min.css' %}" rel="stylesheet">
 
     <!-- Template Stylesheet -->
-    <link href="{% static 'assets1/css/style.css' %}" rel="stylesheet">
+    <link href="{% static 'assets/css/style.css' %}" rel="stylesheet">
 </head>
 
 <body>
@@ -43,7 +44,7 @@
         <!-- Spinner End -->
 
 
-        <!-- Sign In Start -->
+        <!-- Sign Up Start -->
         <div class="container-fluid">
             <div class="row h-100 align-items-center justify-content-center" style="min-height: 100vh;">
                 <div class="col-12 col-sm-8 col-md-6 col-lg-5 col-xl-4">
@@ -52,31 +53,43 @@
                             <a href="index.html" class="">
                                 <h3 class="text-primary"><i class="fa fa-user-edit me-2"></i>DarkPan</h3>
                             </a>
-                            <h3>Sign In</h3>
+                            <h3>Sign Up</h3>
                         </div>
-                        <form class="login100-form validate-form" method="post">{% csrf_token %}
-                        <div class="form-floating mb-3">
-                            <input type="text" class="form-control" id="floatingInput" placeholder="username" name="uname">
-                            <label for="floatingInput">Username</label>
-                        </div>
-                        <div class="form-floating mb-4">
-                            <input type="password" class="form-control" id="floatingPassword" placeholder="Password" name="pass">
-                            <label for="floatingPassword">Password</label>
-                        </div>
-                        <div class="d-flex align-items-center justify-content-between mb-4">
-                            <div class="form-check">
-                                <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                                <label class="form-check-label" for="exampleCheck1">Check me out</label>
-                            </div>
-                            <a href="">Forgot Password</a>
-                        </div>
-                        <button type="submit" class="btn btn-primary py-3 w-100 mb-4">Sign In</button>
-                        <p class="text-center mb-0">Don't have an Account? <br><a href="{% url 'student' %}">Student</a><br><a href="{% url 'parent' %}">Parent</a></p>
+                        <form method="post">{% csrf_token %}
+
+
+
+
+<!--                        <div class="form-floating mb-3">-->
+<!--                            <input type="text" class="form-control" id="floatingText" placeholder="jhondoe">-->
+<!--                            <label for="floatingText">Username</label>-->
+<!--                        </div>-->
+<!--                        <div class="form-floating mb-3">-->
+<!--                            <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">-->
+<!--                            <label for="floatingInput">Email address</label>-->
+<!--                        </div>-->
+<!--                        <div class="form-floating mb-4">-->
+                             {{parent_form|crispy}}
+                            {{login_form|crispy}}
+<!--                            <input type="password" class="form-control" id="floatingPassword" placeholder="Password">-->
+<!--                            <label for="floatingPassword">Password</label>-->
+<!--                        </div>-->
+<!--                        <div class="d-flex align-items-center justify-content-between mb-4">-->
+<!--                            <div class="form-check">-->
+<!--                                <input type="checkbox" class="form-check-input" id="exampleCheck1">-->
+<!--                                <label class="form-check-label" for="exampleCheck1">Check me out</label>-->
+<!--                            </div>-->
+<!--                            <a href="">Forgot Password</a>-->
+<!--                        </div>-->
+                        <button type="submit" class="btn btn-primary py-3 w-100 mb-4">Sign Up</button>
+                        <p class="text-center mb-0">Already have an Account? <a href="{% url 'login' %}">Sign In</a></p>
+                        </form>
+                    </div>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- Sign In End -->
+        <!-- Sign Up End -->
     </div>
 
     <!-- JavaScript Libraries -->
