--- a/templates/student_temp/student_home.html
+++ b/templates/student_temp/student_home.html
@@ -47,7 +47,7 @@
         <div class="sidebar pe-4 pb-3">
             <nav class="navbar bg-secondary navbar-dark">
                 <a href="index.html" class="navbar-brand mx-4 mb-3">
-                    <h3 class="text-primary"><i class="fa fa-user-edit me-2"></i>Hostel</h3>
+                    <h3 class="text-primary"><i class="fa fa-user-edit me-2"></i>DarkPan</h3>
                 </a>
                 <div class="d-flex align-items-center ms-4 mb-4">
                     <div class="position-relative">
@@ -55,7 +55,7 @@
                         <div class="bg-success rounded-circle border border-2 border-white position-absolute end-0 bottom-0 p-1"></div>
                     </div>
                     <div class="ms-3">
-                        <h6 class="mb-0"></h6>
+                        <h6 class="mb-0">Student</h6>
                         <span>Admin</span>
                     </div>
                 </div>
@@ -64,23 +64,70 @@
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-chart-bar me-2"></i>Hostel Details</a>
                         <div class="dropdown-menu bg-transparent border-0">
-                            <a href="{% url 'addhostel' %}" class="dropdown-item">add hostel</a>
-                            <a href="{% url 'hostel' %}" class="dropdown-item">View Hostel</a>
+                            <a href="{% url 'studentviewhostel' %}" class="dropdown-item">View Hostel</a>
 <!--                            <a href="element.html" class="dropdown-item">Other Elements</a>-->
                         </div>
                     </div>
-                    <a href="chart.html" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Food Details</a>
-                    <a href="chart.html" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Complaints</a>
-                    <a href="chart.html" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Fee Details</a>
-                    <a href="chart.html" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Payment Details</a>
-                    <a href="chart.html" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Manage Notification</a>
-                    <a href="chart.html" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Attence Details</a>
-                    <a href="chart.html" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Manage Staff</a>
-                    <a href="chart.html" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Approve/Reject Parents</a>
-                    <a href="chart.html" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Approve/Reject Students</a>
-                    <a href="chart.html" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Room Booking Details</a>
-                    <a href="chart.html" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>View Review</a>
-
+                     <div class="nav-item dropdown">
+                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-chart-bar me-2"></i>Food Details</a>
+                        <div class="dropdown-menu bg-transparent border-0">
+                            <a href="{% url 'studentviewfoods' %}" class="dropdown-item">View Foods</a>
+<!--                            <a href="element.html" class="dropdown-item">Other Elements</a>-->
+                        </div>
+                    </div>
+                    <div class="nav-item dropdown">
+                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-chart-bar me-2"></i>Book Room</a>
+                        <div class="dropdown-menu bg-transparent border-0">
+<!--                            <a href="{% url 'studentviewfoods' %}" class="dropdown-item">View Foods</a>-->
+<!--                            <a href="element.html" class="dropdown-item">Other Elements</a>-->
+                        </div>
+                    </div>
+                    <div class="nav-item dropdown">
+                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-chart-bar me-2"></i>Fee Payment</a>
+                        <div class="dropdown-menu bg-transparent border-0">
+<!--                            <a href="{% url 'studentviewfoods' %}" class="dropdown-item">View Foods</a>-->
+<!--                            <a href="element.html" class="dropdown-item">Other Elements</a>-->
+                        </div>
+                    </div>
+                    <div class="nav-item dropdown">
+                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-chart-bar me-2"></i>View Attendence</a>
+                        <div class="dropdown-menu bg-transparent border-0">
+<!--                            <a href="{% url 'studentviewfoods' %}" class="dropdown-item">View Foods</a>-->
+<!--                            <a href="element.html" class="dropdown-item">Other Elements</a>-->
+                        </div>
+                    </div>
+                    <div class="nav-item dropdown">
+                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-chart-bar me-2"></i>Delete Account</a>
+                        <div class="dropdown-menu bg-transparent border-0">
+<!--                            <a href="{% url 'studentviewfoods' %}" class="dropdown-item">View Foods</a>-->
+<!--                            <a href="element.html" class="dropdown-item">Other Elements</a>-->
+                        </div>
+                    </div>
+                    <div class="nav-item dropdown">
+                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-chart-bar me-2"></i>Register Complaint</a>
+                        <div class="dropdown-menu bg-transparent border-0">
+<!--                            <a href="{% url 'studentviewfoods' %}" class="dropdown-item">View Foods</a>-->
+<!--                            <a href="element.html" class="dropdown-item">Other Elements</a>-->
+                        </div>
+                    </div>
+                    <div class="nav-item dropdown">
+                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-chart-bar me-2"></i>View/Update<br>Profile</a>
+                        <div class="dropdown-menu bg-transparent border-0">
+<!--                            <a href="{% url 'studentviewfoods' %}" class="dropdown-item">View Foods</a>-->
+<!--                            <a href="element.html" class="dropdown-item">Other Elements</a>-->
+                        </div>
+                    </div>
+                    <div class="nav-item dropdown">
+                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-chart-bar me-2"></i>Send Review</a>
+                        <div class="dropdown-menu bg-transparent border-0">
+<!--                            <a href="{% url 'studentviewfoods' %}" class="dropdown-item">View Foods</a>-->
+<!--                            <a href="element.html" class="dropdown-item">Other Elements</a>-->
+                        </div>
+                    </div>
+<!--                    <a href="widget.html" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Food Details</a>-->
+<!--                    <a href="form.html" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Complaints</a>-->
+<!--                    <a href="table.html" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Fee Details</a>-->
+<!--                    <a href="chart.html" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Payment Details</a>-->
 <!--                    <div class="nav-item dropdown">-->
 <!--                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="far fa-file-alt me-2"></i>Pages</a>-->
 <!--                        <div class="dropdown-menu bg-transparent border-0">-->
@@ -89,7 +136,7 @@
 <!--                            <a href="404.html" class="dropdown-item">404 Error</a>-->
 <!--                            <a href="blank.html" class="dropdown-item">Blank Page</a>-->
 <!--                        </div>-->
-                    </div>
+<!--                    </div>-->
                 </div>
             </nav>
         </div>
@@ -179,9 +226,9 @@
                             <span class="d-none d-lg-inline-flex">{{request.user}}</span>
                         </a>
                         <div class="dropdown-menu dropdown-menu-end bg-secondary border-0 rounded-0 rounded-bottom m-0">
-                            <a href="#" class="dropdown-item">My Profile</a>
-                            <a href="#" class="dropdown-item">Settings</a>
-                            <a href="#" class="dropdown-item">Log Out</a>
+<!--                            <a href="#" class="dropdown-item">My Profile</a>-->
+<!--                            <a href="#" class="dropdown-item">Settings</a>-->
+                            <a href="{% url 'logout' %}" class="dropdown-item">Log Out</a>
                         </div>
                     </div>
                 </div>
@@ -192,16 +239,17 @@
             <!-- Sale & Revenue Start -->
             <div class="container-fluid pt-4 px-4">
                 <div class="row g-4">
-<!--                    <div class="col-sm-6 col-xl-3">-->
-<!--&lt;!&ndash;                        <div class="bg-secondary rounded d-flex align-items-center justify-content-between p-4">&ndash;&gt;-->
-<!--&lt;!&ndash;                            <i class="fa fa-chart-line fa-3x text-primary"></i>&ndash;&gt;-->
-<!--&lt;!&ndash;&lt;!&ndash;                            <div class="ms-3">&ndash;&gt;&ndash;&gt;-->
-<!--&lt;!&ndash;&lt;!&ndash;                                <p class="mb-2">Today Sale</p>&ndash;&gt;&ndash;&gt;-->
-<!--&lt;!&ndash;&lt;!&ndash;                                <h6 class="mb-0">$1234</h6>&ndash;&gt;&ndash;&gt;-->
-<!--&lt;!&ndash;&lt;!&ndash;                            </div>&ndash;&gt;&ndash;&gt;-->
-<!--&lt;!&ndash;                        </div>&ndash;&gt;-->
-<!--                    </div>-->
-<!--                    <div class="col-sm-6 col-xl-3">-->
+                    <div class="col-sm-6 col-xl-3">
+
+<!--                        <div class="bg-secondary rounded d-flex align-items-center justify-content-between p-4">-->
+<!--                            <i class="fa fa-chart-line fa-3x text-primary"></i>-->
+<!--                            <div class="ms-3">-->
+<!--                                <p class="mb-2">Today Sale</p>-->
+<!--                                <h6 class="mb-0">$1234</h6>-->
+<!--                            </div>-->
+<!--                        </div>-->
+                    </div>
+                    <div class="col-sm-6 col-xl-3">
 <!--                        <div class="bg-secondary rounded d-flex align-items-center justify-content-between p-4">-->
 <!--                            <i class="fa fa-chart-bar fa-3x text-primary"></i>-->
 <!--                            <div class="ms-3">-->
@@ -209,8 +257,8 @@
 <!--                                <h6 class="mb-0">$1234</h6>-->
 <!--                            </div>-->
 <!--                        </div>-->
-<!--                    </div>-->
-<!--                    <div class="col-sm-6 col-xl-3">-->
+                    </div>
+                    <div class="col-sm-6 col-xl-3">
 <!--                        <div class="bg-secondary rounded d-flex align-items-center justify-content-between p-4">-->
 <!--                            <i class="fa fa-chart-area fa-3x text-primary"></i>-->
 <!--                            <div class="ms-3">-->
@@ -218,8 +266,8 @@
 <!--                                <h6 class="mb-0">$1234</h6>-->
 <!--                            </div>-->
 <!--                        </div>-->
-<!--                    </div>-->
-<!--                    <div class="col-sm-6 col-xl-3">-->
+                    </div>
+                    <div class="col-sm-6 col-xl-3">
 <!--                        <div class="bg-secondary rounded d-flex align-items-center justify-content-between p-4">-->
 <!--                            <i class="fa fa-chart-pie fa-3x text-primary"></i>-->
 <!--                            <div class="ms-3">-->
@@ -227,15 +275,15 @@
 <!--                                <h6 class="mb-0">$1234</h6>-->
 <!--                            </div>-->
 <!--                        </div>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--            &lt;!&ndash; Sale & Revenue End &ndash;&gt;-->
+                    </div>
+                </div>
+            </div>
+            <!-- Sale & Revenue End -->
 
 
-<!--            &lt;!&ndash; Sales Chart Start &ndash;&gt;-->
-<!--            <div class="container-fluid pt-4 px-4">-->
-<!--                <div class="row g-4">-->
+            <!-- Sales Chart Start -->
+            <div class="container-fluid pt-4 px-4">
+                <div class="row g-4">
 <!--                    <div class="col-sm-12 col-xl-6">-->
 <!--                        <div class="bg-secondary text-center rounded p-4">-->
 <!--                            <div class="d-flex align-items-center justify-content-between mb-4">-->
@@ -254,18 +302,17 @@
 <!--                            <canvas id="salse-revenue"></canvas>-->
 <!--                        </div>-->
 <!--                    </div>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--            &lt;!&ndash; Sales Chart End &ndash;&gt;-->
+                </div>
+            </div>
+            <!-- Sales Chart End -->
 
 
             <!-- Recent Sales Start -->
-<!--            <div class="container-fluid pt-4 px-4">-->
+            <div class="container-fluid pt-4 px-4">
+                 {% block content %}
+                        {% endblock %}
 <!--                <div class="bg-secondary text-center rounded p-4">-->
 <!--                    <div class="d-flex align-items-center justify-content-between mb-4">-->
-                         {% block content %}
-
-                  {% endblock %}
 <!--                        <h6 class="mb-0">Recent Salse</h6>-->
 <!--                        <a href="">Show All</a>-->
 <!--                    </div>-->
@@ -328,10 +375,10 @@
 <!--                                    <td>Paid</td>-->
 <!--                                    <td><a class="btn btn-sm btn-primary" href="">Detail</a></td>-->
 <!--                                </tr>-->
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
+<!--                            </tbody>-->
+<!--                        </table>-->
+<!--                    </div>-->
+<!--                </div>-->
             </div>
             <!-- Recent Sales End -->
 
@@ -339,7 +386,7 @@
             <!-- Widgets Start -->
             <div class="container-fluid pt-4 px-4">
                 <div class="row g-4">
-<!--                    <div class="col-sm-12 col-md-6 col-xl-4">-->
+                    <div class="col-sm-12 col-md-6 col-xl-4">
 <!--                        <div class="h-100 bg-secondary rounded p-4">-->
 <!--                            <div class="d-flex align-items-center justify-content-between mb-2">-->
 <!--                                <h6 class="mb-0">Messages</h6>-->
@@ -386,8 +433,8 @@
 <!--                                </div>-->
 <!--                            </div>-->
 <!--                        </div>-->
-<!--                    </div>-->
-<!--                    <div class="col-sm-12 col-md-6 col-xl-4">-->
+                    </div>
+                    <div class="col-sm-12 col-md-6 col-xl-4">
 <!--                        <div class="h-100 bg-secondary rounded p-4">-->
 <!--                            <div class="d-flex align-items-center justify-content-between mb-4">-->
 <!--                                <h6 class="mb-0">Calender</h6>-->
@@ -395,8 +442,8 @@
 <!--                            </div>-->
 <!--                            <div id="calender"></div>-->
 <!--                        </div>-->
-<!--                    </div>-->
-<!--                    <div class="col-sm-12 col-md-6 col-xl-4">-->
+                    </div>
+                    <div class="col-sm-12 col-md-6 col-xl-4">
 <!--                        <div class="h-100 bg-secondary rounded p-4">-->
 <!--                            <div class="d-flex align-items-center justify-content-between mb-4">-->
 <!--                                <h6 class="mb-0">To Do List</h6>-->
@@ -452,7 +499,7 @@
 <!--                                </div>-->
 <!--                            </div>-->
 <!--                        </div>-->
-<!--                    </div>-->
+                    </div>
                 </div>
             </div>
             <!-- Widgets End -->
