--- a/templates/admin_temp/admin_home.html
+++ b/templates/admin_temp/admin_home.html
@@ -80,65 +80,79 @@
                         </div>
                     </div>
                         <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-chart-bar me-2"></i>Manage Complaint</a>
+                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-chart-bar me-2">
+                        </i>Manage Complaint</a>
+                        <div class="dropdown-menu bg-transparent border-0">
+                            <a href="{% url 'viewcomplaint' %}" class="dropdown-item">View Complaint</a>
+<!--                            <a href="element.html" class="dropdown-item">Other Elements</a>-->
+                        </div>
+                    </div>
+                        <div class="nav-item dropdown">
+                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-chart-bar me-2">
+                        </i>Add/View Fee</a>
+                        <div class="dropdown-menu bg-transparent border-0">
+<!--                            <a href="{% url 'studentviewfoods' %}" class="dropdown-item">Add Fees</a>-->
+<!--                            <a href="{% url 'studentviewfoods' %}" class="dropdown-item">View Fees</a>-->
+<!--                            <a href="element.html" class="dropdown-item">Other Elements</a>-->
+                        </div>
+                    </div>
+                        <div class="nav-item dropdown">
+                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-chart-bar me-2">
+                        </i>Payment Details</a>
                         <div class="dropdown-menu bg-transparent border-0">
 <!--                            <a href="{% url 'studentviewfoods' %}" class="dropdown-item">View Foods</a>-->
 <!--                            <a href="element.html" class="dropdown-item">Other Elements</a>-->
                         </div>
                     </div>
                         <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-chart-bar me-2"></i>Add/View Fee</a>
+                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-chart-bar me-2">
+                        </i>Manage Notification</a>
                         <div class="dropdown-menu bg-transparent border-0">
 <!--                            <a href="{% url 'studentviewfoods' %}" class="dropdown-item">View Foods</a>-->
 <!--                            <a href="element.html" class="dropdown-item">Other Elements</a>-->
                         </div>
                     </div>
                         <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-chart-bar me-2"></i>Payment Details</a>
+                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-chart-bar me-2">
+                        </i>Add/View Attendence</a>
+                        <div class="dropdown-menu bg-transparent border-0">
+<!--                            <a href="{% url 'studentviewfoods' %}" class="dropdown-item">Add Attendence</a>-->
+<!--                            <a href="{% url 'studentviewfoods' %}" class="dropdown-item">View Attendence</a>-->
+
+<!--                            <a href="element.html" class="dropdown-item">Other Elements</a>-->
+                        </div>
+                    </div>
+                        <div class="nav-item dropdown">
+                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-chart-bar me-2">
+                        </i>Manage Staff</a>
+                        <div class="dropdown-menu bg-transparent border-0">
+                            <a href="{% url 'addstaff' %}" class="dropdown-item">Add Staff</a>
+                            <a href="{% url 'viewstaff' %}" class="dropdown-item">View Staff</a>
+
+<!--                            <a href="element.html" class="dropdown-item">Other Elements</a>-->
+                        </div>
+                    </div>
+                        <div class="nav-item dropdown">
+                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-chart-bar me-2">
+                        </i>Approve/reject parent</a>
                         <div class="dropdown-menu bg-transparent border-0">
 <!--                            <a href="{% url 'studentviewfoods' %}" class="dropdown-item">View Foods</a>-->
 <!--                            <a href="element.html" class="dropdown-item">Other Elements</a>-->
                         </div>
                     </div>
                         <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-chart-bar me-2"></i>Manage Notification</a>
+                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-chart-bar me-2">
+                        </i>Manage Room Booking</a>
                         <div class="dropdown-menu bg-transparent border-0">
 <!--                            <a href="{% url 'studentviewfoods' %}" class="dropdown-item">View Foods</a>-->
 <!--                            <a href="element.html" class="dropdown-item">Other Elements</a>-->
                         </div>
                     </div>
                         <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-chart-bar me-2"></i>Add/View Attendence</a>
+                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-chart-bar me-2">
+                        </i>View Review</a>
                         <div class="dropdown-menu bg-transparent border-0">
 <!--                            <a href="{% url 'studentviewfoods' %}" class="dropdown-item">View Foods</a>-->
-<!--                            <a href="element.html" class="dropdown-item">Other Elements</a>-->
-                        </div>
-                    </div>
-                        <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-chart-bar me-2"></i>Manage Staff</a>
-                        <div class="dropdown-menu bg-transparent border-0">
-<!--                            <a href="{% url 'studentviewfoods' %}" class="dropdown-item">View Foods</a>-->
-<!--                            <a href="element.html" class="dropdown-item">Other Elements</a>-->
-                        </div>
-                    </div>
-                        <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-chart-bar me-2"></i>Approve/reject parent</a>
-                        <div class="dropdown-menu bg-transparent border-0">
-<!--                            <a href="{% url 'studentviewfoods' %}" class="dropdown-item">View Foods</a>-->
-<!--                            <a href="element.html" class="dropdown-item">Other Elements</a>-->
-                        </div>
-                    </div>
-                        <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-chart-bar me-2"></i>Manage Room Booking</a>
-                        <div class="dropdown-menu bg-transparent border-0">
-<!--                            <a href="{% url 'studentviewfoods' %}" class="dropdown-item">View Foods</a>-->
-<!--                            <a href="element.html" class="dropdown-item">Other Elements</a>-->
-                        </div>
-                    </div>
-                        <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-chart-bar me-2"></i>View Review</a>
-                        <div class="dropdown-menu bg-transparent border-0">
-                            <a href="{% url 'studentviewfoods' %}" class="dropdown-item">View Foods</a>
 <!--                            <a href="element.html" class="dropdown-item">Other Elements</a>-->
                         </div>
                     </div>
