--- a/templates/admin_temp/view_complaint.html
+++ b/templates/admin_temp/view_complaint.html
@@ -6,18 +6,16 @@
 
 <div class="col-12">
     <div class="bg-secondary rounded h-100 p-4">
-        <h6 class="mb-4">View_Hostel</h6>
+        <h6 class="mb-4">View Complaints</h6>
         <div class="table-responsive">
             <table class="table">
                 <thead>
                 <tr>
 <!--                    <th scope="col">#</th>-->
-                    <th scope="col">Name</th>
-                    <th scope="col">Place</th>
-                    <th scope="col">Contact</th>
-                    <th scope="col">Email</th>
-                    <th>Update</th>
-                    <th>Delete</th>
+                    <th scope="col">Subject</th>
+                    <th scope="col">Date</th>
+                    <th scope="col">Complaint</th>
+<!--                    <th scope="col">Email</th>-->
 <!--                    <th scope="col">ZIP</th>-->
 <!--                    <th scope="col">Status</th>-->
                 </tr>
@@ -26,12 +24,11 @@
                 {% for i in data %}
                 <tr>
 <!--                    <th scope="row">1</th>-->
-                    <td>{{i.name}}</td>
-                    <td>{{i.place}}</td>
-                    <td>{{i.contact_no}}</td>
-                    <td>{{i.email}}</td>
-                    <td><a href="{% url 'updatehostel' i.id %}"><button class="btn btn-success">Update</button> </a></td>
-                    <td><a href="{% url 'deletehostel' i.id %}"><button class="btn btn-success">Delete</button> </a> </td>
+                    <td>{{i.subject}}</td>
+                    <td>{{i.date}}</td>
+                    <td>{{i.complaint}}</td>
+
+<!--                    <td>{{i.email}}</td>-->
 <!--                    <td>123</td>-->
 <!--                    <td>Member</td>-->
                 </tr>
