--- a/templates/admin_temp/view_food.html
+++ b/templates/admin_temp/view_food.html
@@ -12,9 +12,11 @@
                 <thead>
                 <tr>
 <!--                    <th scope="col">#</th>-->
-                    <th scope="col">Breakfast</th>
-                    <th scope="col">Lunch</th>
-                    <th scope="col">Dinner</th>
+                    <th>Breakfast</th>
+                    <th>Lunch</th>
+                    <th>Dinner</th>
+                    <th>Update</th>
+                    <th>Delete</th>
 <!--                    <th scope="col">Email</th>-->
 <!--                    <th scope="col">ZIP</th>-->
 <!--                    <th scope="col">Status</th>-->
@@ -27,6 +29,8 @@
                     <td>{{i.breakfast}}</td>
                     <td>{{i.lunch}}</td>
                     <td>{{i.dinner}}</td>
+                    <td><a href="{% url 'updatefood' i.id %}"><button class="btn btn-success">Update</button> </a> </td>
+                    <td><a href="{% url 'deletefood' i.id %}"><button class="btn btn-success">Delete</button> </a></td>
 <!--                    <td>{{i.email}}</td>-->
 <!--                    <td>123</td>-->
 <!--                    <td>Member</td>-->
