--- a/templates/admin_temp/view_staff.html
+++ b/templates/admin_temp/view_staff.html
@@ -13,9 +13,11 @@
                 <tr>
 <!--                    <th scope="col">#</th>-->
                     <th scope="col">Name</th>
-                    <th scope="col">Place</th>
-                    <th scope="col">Contact</th>
+                    <th scope="col">Age</th>
+                    <th scope="col">Address</th>
+                    <th scope="col">Contact_no</th>
                     <th scope="col">Email</th>
+
                     <th>Update</th>
                     <th>Delete</th>
 <!--                    <th scope="col">ZIP</th>-->
@@ -27,11 +29,12 @@
                 <tr>
 <!--                    <th scope="row">1</th>-->
                     <td>{{i.name}}</td>
-                    <td>{{i.place}}</td>
+                    <td>{{i.age}}</td>
+                    <td>{{i.address}}</td>
                     <td>{{i.contact_no}}</td>
                     <td>{{i.email}}</td>
-                    <td><a href="{% url 'updatehostel' i.id %}"><button class="btn btn-success">Update</button> </a></td>
-                    <td><a href="{% url 'deletehostel' i.id %}"><button class="btn btn-success">Delete</button> </a> </td>
+                    <td><a href="{% url 'updatestaff' i.id %}"><button class="btn btn-success">Update</button> </a></td>
+                    <td><a href="{% url 'deletestaff' i.id %}"><button class="btn btn-success">Delete</button> </a> </td>
 <!--                    <td>123</td>-->
 <!--                    <td>Member</td>-->
                 </tr>
