--- a/templates/student_temp/student_home.html
+++ b/templates/student_temp/student_home.html
@@ -106,14 +106,14 @@
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-chart-bar me-2"></i>Register Complaint</a>
                         <div class="dropdown-menu bg-transparent border-0">
-<!--                            <a href="{% url 'studentviewfoods' %}" class="dropdown-item">View Foods</a>-->
+                            <a href="{% url 'studentcomplaint' %}" class="dropdown-item">Complaint</a>
 <!--                            <a href="element.html" class="dropdown-item">Other Elements</a>-->
                         </div>
                     </div>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-chart-bar me-2"></i>View/Update<br>Profile</a>
                         <div class="dropdown-menu bg-transparent border-0">
-<!--                            <a href="{% url 'studentviewfoods' %}" class="dropdown-item">View Foods</a>-->
+<!--                            <a href="{% url 'studentviewfoods' %}" class="dropdown-item">View profile</a>-->
 <!--                            <a href="element.html" class="dropdown-item">Other Elements</a>-->
                         </div>
                     </div>
