--- a/templates/parent_Registration.html
+++ b/templates/parent_Registration.html
@@ -81,7 +81,7 @@
 <!--                            </div>-->
 <!--                            <a href="">Forgot Password</a>-->
 <!--                        </div>-->
-                        <button type="submit" class="btn btn-primary py-3 w-100 mb-4">Sign Up</button>
+                        <button type="submit" class="btn btn-primary py-3 w-100 mb-4">Submit</button>
                         <p class="text-center mb-0">Already have an Account? <a href="{% url 'login' %}">Sign In</a></p>
                         </form>
                     </div>
