--- a/templates/admin_temp/add_hostel.html
+++ b/templates/admin_temp/add_hostel.html
@@ -3,41 +3,28 @@
 {% load static %}
 {% load crispy_forms_tags %}
 
-                    <div class="col-sm-12 col-xl-6">
-                        <div class="bg-secondary rounded h-100 p-4">
-                            <h6 class="mb-4">Add Hostel</h6>
+                    <div class="col-sm-6 col-xl-6">
+                        <div class="bg-light rounded h-100 p-4">
+                            <h6 class="mb-4">Basic Form</h6>
                             <form method="post">{% csrf_token %}
-                            <div class="form-floating mb-3">
-                                {{form|crispy}}
+                                <div class="mb-3">
+                                    {{form|crispy}}
+<!--                                    <label for="exampleInputEmail1" class="form-label">Email address</label>-->
+<!--                                    <input type="email" class="form-control" id="exampleInputEmail1"-->
+<!--                                        aria-describedby="emailHelp">-->
+<!--                                    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.-->
+<!--                                    </div>-->
+<!--                                </div>-->
+<!--                                <div class="mb-3">-->
+<!--                                    <label for="exampleInputPassword1" class="form-label">Password</label>-->
+<!--                                    <input type="password" class="form-control" id="exampleInputPassword1">-->
+<!--                                </div>-->
+<!--                                <div class="mb-3 form-check">-->
+<!--                                    <input type="checkbox" class="form-check-input" id="exampleCheck1">-->
+<!--                                    <label class="form-check-label" for="exampleCheck1">Check me out</label>-->
+<!--                                </div>-->
+                                <button type="submit" class="btn btn-primary">Sign in</button>
                             </form>
-<!--                                <input type="email" class="form-control" id="floatingInput"-->
-<!--                                    placeholder="name@example.com">-->
-<!--                                <label for="floatingInput">Email address</label>-->
-<!--                            </div>-->
-<!--                            <div class="form-floating mb-3">-->
-<!--                                <input type="password" class="form-control" id="floatingPassword"-->
-<!--                                    placeholder="Password">-->
-<!--                                <label for="floatingPassword">Password</label>-->
-<!--                            </div>-->
-<!--                            <div class="form-floating mb-3">-->
-<!--                                <select class="form-select" id="floatingSelect"-->
-<!--                                    aria-label="Floating label select example">-->
-<!--                                    <option selected>Open this select menu</option>-->
-<!--                                    <option value="1">One</option>-->
-<!--                                    <option value="2">Two</option>-->
-<!--                                    <option value="3">Three</option>-->
-<!--                                </select>-->
-<!--                                <label for="floatingSelect">Works with selects</label>-->
-<!--                            </div>-->
-<!--                            <div class="form-floating">-->
-<!--                                <textarea class="form-control" placeholder="Leave a comment here"-->
-<!--                                    id="floatingTextarea" style="height: 150px;"></textarea>-->
-<!--                                <label for="floatingTextarea">Comments</label>-->
-<!--                            </div>-->
-                            <br>
-                            <div class="col-sm-10">
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                  </div>
                         </div>
                     </div>
 
