--- a/templates/admin_temp/add_hostel.html
+++ b/templates/admin_temp/add_hostel.html
@@ -3,8 +3,8 @@
 {% load static %}
 {% load crispy_forms_tags %}
 
-                    <div class="col-sm-6 col-xl-6">
-                        <div class="bg-light rounded h-100 p-4">
+                    <div class="col-sm-12 col-xl-6">
+                        <div class="bg-light rounded h-10 p-4">
                             <h6 class="mb-4">Basic Form</h6>
                             <form method="post">{% csrf_token %}
                                 <div class="mb-3">
@@ -23,7 +23,11 @@
 <!--                                    <input type="checkbox" class="form-check-input" id="exampleCheck1">-->
 <!--                                    <label class="form-check-label" for="exampleCheck1">Check me out</label>-->
 <!--                                </div>-->
-                                <button type="submit" class="btn btn-primary">Sign in</button>
+                                    <br>
+                            <div class="col-sm-10">
+                                <button type="submit" class="btn btn-primary">Submit</button>
+                                </div>
+                                </div>
                             </form>
                         </div>
                     </div>
