--- a/templates/parent_temp/parent_view_staff.html
+++ b/templates/parent_temp/parent_view_staff.html
@@ -18,8 +18,8 @@
                     <th scope="col">Contact_no</th>
                     <th scope="col">Email</th>
 
-                    <th>Edit</th>
-                    <th>Delete</th>
+<!--                    <th>Update</th>-->
+<!--                    <th>Delete</th>-->
 <!--                    <th scope="col">ZIP</th>-->
 <!--                    <th scope="col">Status</th>-->
                 </tr>
@@ -33,8 +33,8 @@
                     <td>{{i.address}}</td>
                     <td>{{i.contact_no}}</td>
                     <td>{{i.email}}</td>
-                    <td><a href="{% url 'updatestaff' i.id %}"><button class="btn btn-success">Edit</button> </a></td>
-                    <td><a href="{% url 'deletestaff' i.id %}"><button class="btn btn-danger">Delete</button> </a> </td>
+<!--                    <td><a href="{% url 'updatestaff' i.id %}"><button class="btn btn-success">Update</button> </a></td>-->
+<!--                    <td><a href="{% url 'deletestaff' i.id %}"><button class="btn btn-success">Delete</button> </a> </td>-->
 <!--                    <td>123</td>-->
 <!--                    <td>Member</td>-->
                 </tr>
