--- a/templates/admin_temp/add_foods.html
+++ b/templates/admin_temp/add_foods.html
@@ -4,7 +4,7 @@
 {% load crispy_forms_tags %}
 
                     <div class="col-sm-12 col-xl-6">
-                        <div class="bg-secondary rounded h-100 p-4">
+                        <div class="bg-light rounded h-100 p-4">
                             <h6 class="mb-4">Add Foods</h6>
                             <form method="post">{% csrf_token %}
                             <div class="form-floating mb-3">
