--- a/templates/admin_temp/view_food.html
+++ b/templates/admin_temp/view_food.html
@@ -5,7 +5,7 @@
 
 
 <div class="col-12">
-    <div class="bg-secondary rounded h-100 p-4">
+    <div class="bg-light rounded h-100 p-4">
         <h6 class="mb-4">View Foods</h6>
         <div class="table-responsive">
             <table class="table">
@@ -15,7 +15,7 @@
                     <th>Breakfast</th>
                     <th>Lunch</th>
                     <th>Dinner</th>
-                    <th>Update</th>
+                    <th>Edit</th>
                     <th>Delete</th>
 <!--                    <th scope="col">Email</th>-->
 <!--                    <th scope="col">ZIP</th>-->
@@ -29,8 +29,8 @@
                     <td>{{i.breakfast}}</td>
                     <td>{{i.lunch}}</td>
                     <td>{{i.dinner}}</td>
-                    <td><a href="{% url 'updatefood' i.id %}"><button class="btn btn-success">Update</button> </a> </td>
-                    <td><a href="{% url 'deletefood' i.id %}"><button class="btn btn-success">Delete</button> </a></td>
+                    <td><a href="{% url 'updatefood' i.id %}"><button class="btn btn-success">Edit</button> </a> </td>
+                    <td><a href="{% url 'deletefood' i.id %}"><button class="btn btn-danger">Delete</button> </a></td>
 <!--                    <td>{{i.email}}</td>-->
 <!--                    <td>123</td>-->
 <!--                    <td>Member</td>-->
