--- a/templates/admin_temp/view_hostel.html
+++ b/templates/admin_temp/view_hostel.html
@@ -12,11 +12,14 @@
                 <thead>
                 <tr>
 <!--                    <th scope="col">#</th>-->
-                    <th scope="col">Name</th>
-                    <th scope="col">Place</th>
-                    <th scope="col">Contact</th>
-                    <th scope="col">Email</th>
-                    <th>Update</th>
+                    <th scope="col">total_rooms</th>
+                    <th scope="col">occupied</th>
+                    <th scope="col">annual_expenses</th>
+                    <th scope="col">location</th>
+                    <th scope="col">contact_no</th>
+                    <th scope="col">room_facilities</th>
+
+                    <th>Edit</th>
                     <th>Delete</th>
 <!--                    <th scope="col">ZIP</th>-->
 <!--                    <th scope="col">Status</th>-->
@@ -26,12 +29,15 @@
                 {% for i in data %}
                 <tr>
 <!--                    <th scope="row">1</th>-->
-                    <td>{{i.name}}</td>
-                    <td>{{i.place}}</td>
+                    <td>{{i.total_rooms}}</td>
+                    <td>{{i.occupied}}</td>
+                    <td>{{i.annual_expenses}}</td>
+                    <td>{{i.location}}</td>
                     <td>{{i.contact_no}}</td>
-                    <td>{{i.email}}</td>
-                    <td><a href="{% url 'updatehostel' i.id %}"><button class="btn btn-success">Update</button> </a></td>
-                    <td><a href="{% url 'deletehostel' i.id %}"><button class="btn btn-success">Delete</button> </a> </td>
+                    <td>{{i.room_facilities}}</td>
+
+                    <td><a href="{% url 'updatehostel' i.id %}"><button class="btn btn-success">Edit</button> </a></td>
+                    <td><a href="{% url 'deletehostel' i.id %}"><button class="btn btn-danger">Delete</button> </a> </td>
 <!--                    <td>123</td>-->
 <!--                    <td>Member</td>-->
                 </tr>
