--- a/templates/admin_temp/view_student.html
+++ b/templates/admin_temp/view_student.html
@@ -6,20 +6,18 @@
 
 <div class="col-12">
     <div class="bg-light rounded h-100 p-4">
-        <h6 class="mb-4">View Staff</h6>
+        <h6 class="mb-4">View Student</h6>
         <div class="table-responsive">
             <table class="table">
                 <thead>
                 <tr>
 <!--                    <th scope="col">#</th>-->
                     <th scope="col">Name</th>
-                    <th scope="col">Age</th>
                     <th scope="col">Address</th>
                     <th scope="col">Contact_no</th>
                     <th scope="col">Email</th>
+                    <th scope="col">Image</th>
 
-                    <th>Edit</th>
-                    <th>Delete</th>
 <!--                    <th scope="col">ZIP</th>-->
 <!--                    <th scope="col">Status</th>-->
                 </tr>
@@ -29,12 +27,11 @@
                 <tr>
 <!--                    <th scope="row">1</th>-->
                     <td>{{i.name}}</td>
-                    <td>{{i.age}}</td>
                     <td>{{i.address}}</td>
                     <td>{{i.contact_no}}</td>
                     <td>{{i.email}}</td>
-                    <td><a href="{% url 'updatestaff' i.id %}"><button class="btn btn-success">Edit</button> </a></td>
-                    <td><a href="{% url 'deletestaff' i.id %}"><button class="btn btn-danger">Delete</button> </a> </td>
+                    <td>{{i.image}}</td>
+
 <!--                    <td>123</td>-->
 <!--                    <td>Member</td>-->
                 </tr>
