--- a/templates/parent_temp/parent_view_food.html
+++ b/templates/parent_temp/parent_view_food.html
@@ -5,7 +5,7 @@
 
 
 <div class="col-12">
-    <div class="bg-secondary rounded h-100 p-4">
+    <div class="bg-light rounded h-100 p-4">
         <h6 class="mb-4">View Foods</h6>
         <div class="table-responsive">
             <table class="table">
