--- a/templates/student_temp/student_home.html
+++ b/templates/student_temp/student_home.html
@@ -65,8 +65,8 @@
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-th me-2">
                         </i>Hostel Details</a>
                         <div class="dropdown-menu bg-transparent border-0">
-                            <a href="button.html" class="dropdown-item">Add Hostel</a>
-                            <a href="typography.html" class="dropdown-item">View Hostel</a>
+<!--                            <a href="button.html" class="dropdown-item">Add Hostel</a>-->
+                            <a href="{% url 'studentviewhostel' %}" class="dropdown-item">View Hostel</a>
 <!--                            <a href="element.html" class="dropdown-item">Other Elements</a>-->
                         </div>
                     </div>
@@ -74,14 +74,14 @@
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-th me-2">
                         </i>Food Details</a>
                         <div class="dropdown-menu bg-transparent border-0">
-                            <a href="button.html" class="dropdown-item">Add Food</a>
-                            <a href="typography.html" class="dropdown-item">View Food</a>
+<!--                            <a href="button.html" class="dropdown-item">Add Food</a>-->
+                            <a href="{% url 'studentviewfoods' %}" class="dropdown-item">View Food</a>
 <!--                            <a href="element.html" class="dropdown-item">Other Elements</a>-->
                         </div>
                     </div>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-th me-2">
-                        </i>Complaints</a>
+                        </i>Room Booking</a>
                         <div class="dropdown-menu bg-transparent border-0">
 <!--                            <a href="button.html" class="dropdown-item">Add Hostel</a>-->
                             <a href="typography.html" class="dropdown-item">View Complaints</a>
@@ -90,7 +90,7 @@
                     </div>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-th me-2">
-                        </i>Fees Details</a>
+                        </i>Fees Payment</a>
                         <div class="dropdown-menu bg-transparent border-0">
                             <a href="button.html" class="dropdown-item">Add Fees</a>
                             <a href="typography.html" class="dropdown-item">View Fees</a>
@@ -99,7 +99,7 @@
                     </div>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-th me-2">
-                        </i>payment Details</a>
+                        </i>Attendence</a>
                         <div class="dropdown-menu bg-transparent border-0">
 <!--                            <a href="button.html" class="dropdown-item">Add Hostel</a>-->
                             <a href="typography.html" class="dropdown-item">View Payments</a>
@@ -108,7 +108,7 @@
                     </div>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-th me-2">
-                        </i>Manage Notification</a>
+                        </i>Delete Account</a>
                         <div class="dropdown-menu bg-transparent border-0">
 <!--                            <a href="button.html" class="dropdown-item">Add Hostel</a>-->
 <!--                            <a href="typography.html" class="dropdown-item">View Hostel</a>-->
@@ -117,57 +117,57 @@
                     </div>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-th me-2">
-                        </i>Attendence Details</a>
+                        </i>Complaint Register</a>
                         <div class="dropdown-menu bg-transparent border-0">
-                            <a href="button.html" class="dropdown-item">Add Attendence</a>
-                            <a href="typography.html" class="dropdown-item">View Attendence</a>
+<!--                            <a href="button.html" class="dropdown-item">Add Attendence</a>-->
+                            <a href="{% url 'studentcomplaint' %}" class="dropdown-item">Add Complaint</a>
 <!--                            <a href="element.html" class="dropdown-item">Other Elements</a>-->
                         </div>
                         <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-th me-2">
-                        </i>Manage Staff</a>
+                        </i>Profile</a>
                         <div class="dropdown-menu bg-transparent border-0">
-                            <a href="button.html" class="dropdown-item">Add Staff</a>
-                            <a href="typography.html" class="dropdown-item">View Staff</a>
+                            <a href="button.html" class="dropdown-item">Add Profile</a>
+                            <a href="typography.html" class="dropdown-item">View profile</a>
 <!--                            <a href="element.html" class="dropdown-item">Other Elements</a>-->
                         </div>
                     </div>
                         <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-th me-2">
-                        </i>Approve/Reject Parents</a>
+                        </i>Send Review</a>
                         <div class="dropdown-menu bg-transparent border-0">
 <!--                            <a href="button.html" class="dropdown-item">Add Hostel</a>-->
 <!--                            <a href="typography.html" class="dropdown-item">View Hostel</a>-->
 <!--                            <a href="element.html" class="dropdown-item">Other Elements</a>-->
                         </div>
                     </div>
-                         <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-th me-2">
-                        </i>Approve/Reject Students</a>
-                        <div class="dropdown-menu bg-transparent border-0">
+<!--                         <div class="nav-item dropdown">-->
+<!--                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-th me-2">-->
+<!--                        </i>Approve/Reject Students</a>-->
+<!--                        <div class="dropdown-menu bg-transparent border-0">-->
 <!--                            <a href="button.html" class="dropdown-item">Add Staff</a>-->
 <!--                            <a href="typography.html" class="dropdown-item">View Staff</a>-->
 <!--                            <a href="element.html" class="dropdown-item">Other Elements</a>-->
-                        </div>
-                    </div>
-                         <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-th me-2">
-                        </i>Room Booking</a>
-                        <div class="dropdown-menu bg-transparent border-0">
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                         <div class="nav-item dropdown">-->
+<!--                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-th me-2">-->
+<!--                        </i>Room Booking</a>-->
+<!--                        <div class="dropdown-menu bg-transparent border-0">-->
 <!--                            <a href="button.html" class="dropdown-item">Add Staff</a>-->
 <!--                            <a href="typography.html" class="dropdown-item">View Staff</a>-->
 <!--                            <a href="element.html" class="dropdown-item">Other Elements</a>-->
-                        </div>
-                    </div>
-                         <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-th me-2">
-                        </i>View Review</a>
-                        <div class="dropdown-menu bg-transparent border-0">
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                         <div class="nav-item dropdown">-->
+<!--                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-th me-2">-->
+<!--                        </i>View Review</a>-->
+<!--                        <div class="dropdown-menu bg-transparent border-0">-->
 <!--                            <a href="button.html" class="dropdown-item">Add Staff</a>-->
 <!--                            <a href="typography.html" class="dropdown-item">View Staff</a>-->
 <!--                            <a href="element.html" class="dropdown-item">Other Elements</a>-->
-                        </div>
-                    </div>
+<!--                        </div>-->
+<!--                    </div>-->
 <!--                    <a href="widget.html" class="nav-item nav-link"><i class="fa fa-th me-2"></i>Widgets</a>-->
 <!--                    <a href="form.html" class="nav-item nav-link"><i class="fa fa-keyboard me-2"></i>Forms</a>-->
 <!--                    <a href="table.html" class="nav-item nav-link"><i class="fa fa-table me-2"></i>Tables</a>-->
@@ -181,6 +181,7 @@
 <!--                            <a href="blank.html" class="dropdown-item">Blank Page</a>-->
 <!--                        </div>-->
 <!--                    </div>-->
+                </div>
                 </div>
             </nav>
         </div>
