--- a/templates/admin_temp/view_student.html
+++ b/templates/admin_temp/view_student.html
@@ -16,7 +16,7 @@
                     <th scope="col">Address</th>
                     <th scope="col">Contact_no</th>
                     <th scope="col">Email</th>
-                    <th scope="col">Image</th>
+                    <th scope="col">Action</th>
 
 <!--                    <th scope="col">ZIP</th>-->
 <!--                    <th scope="col">Status</th>-->
@@ -30,29 +30,19 @@
                     <td>{{i.address}}</td>
                     <td>{{i.contact_no}}</td>
                     <td>{{i.email}}</td>
-                    <td>{{i.image}}</td>
-
-<!--                    <td>123</td>-->
-<!--                    <td>Member</td>-->
+                <td>
+                {% if student.approval_status == 0 %}
+                <a href="{% url 'approve_student' i.id %}"><button class="btn btn-success">Approve</button> </a>
+                    <a href="{% url 'reject_student' i.id %}"><button class="btn btn-danger">Reject</button> </a>
+                {% elif student.approval_status == True %}
+                    <p class="btn btn-success">approve</p>
+                {% else %}
+                    <p class="btn btn-danger">Reject</p>
+                {% endif %}
+                </td>
                 </tr>
-<!--                <tr>-->
-<!--                    <th scope="row">2</th>-->
-<!--                    <td>Mark</td>-->
-<!--                    <td>Otto</td>-->
-<!--                    <td>mark@email.com</td>-->
-<!--                    <td>UK</td>-->
-<!--                    <td>456</td>-->
-<!--                    <td>Member</td>-->
-<!--                </tr>-->
-<!--                <tr>-->
-<!--                    <th scope="row">3</th>-->
-<!--                    <td>Jacob</td>-->
-<!--                    <td>Thornton</td>-->
-<!--                    <td>jacob@email.com</td>-->
-<!--                    <td>AU</td>-->
-<!--                    <td>789</td>-->
-<!--                    <td>Member</td>-->
-<!--                </tr>-->
+
+
                 </tbody>
                 {% endfor %}
             </table>
