--- a/templates/admin_temp/add_foods.html
+++ b/templates/admin_temp/add_foods.html
@@ -9,6 +9,7 @@
                             <form method="post">{% csrf_token %}
                             <div class="form-floating mb-3">
                                 {{form|crispy}}
+                            </div>
                             </form>
 <!--                                <input type="email" class="form-control" id="floatingInput"-->
 <!--                                    placeholder="name@example.com">-->
