--- a/templates/admin_temp/admin_home.html
+++ b/templates/admin_temp/admin_home.html
@@ -47,7 +47,7 @@
         <div class="sidebar pe-4 pb-3">
             <nav class="navbar bg-light navbar-light">
                 <a href="index.html" class="navbar-brand mx-4 mb-3">
-                    <h3 class="text-primary"><i class="fa fa-hashtag me-2"></i>DASHMIN</h3>
+                    <h3 class="text-primary"><i class="fa fa-hashtag me-2"></i>ADMIN</h3>
                 </a>
                 <div class="d-flex align-items-center ms-4 mb-4">
                     <div class="position-relative">
@@ -117,10 +117,10 @@
                     </div>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-th me-2">
-                        </i>Attendence Details</a>
+                        </i>Attendance Details</a>
                         <div class="dropdown-menu bg-transparent border-0">
-                            <a href="button.html" class="dropdown-item">Add Attendence</a>
-                            <a href="typography.html" class="dropdown-item">View Attendence</a>
+                            <a href="{% url 'addattendance' %}" class="dropdown-item">Add Attendance</a>
+                            <a href="typography.html" class="dropdown-item">View Attandence</a>
 <!--                            <a href="element.html" class="dropdown-item">Other Elements</a>-->
                         </div>
                         <div class="nav-item dropdown">
