--- a/templates/admin_temp/add_fees.html
+++ b/templates/admin_temp/add_fees.html
@@ -5,11 +5,13 @@
 
                     <div class="col-sm-12 col-xl-6">
                         <div class="bg-light rounded h-100 p-4">
-                            <h6 class="mb-4">Add Foods</h6>
+                            <h6 class="mb-4">Add Fees</h6>
                             <form method="post">{% csrf_token %}
                             <div class="form-floating mb-3">
                                 {{form|crispy}}
+                            </div>
                             </form>
+
 <!--                                <input type="email" class="form-control" id="floatingInput"-->
 <!--                                    placeholder="name@example.com">-->
 <!--                                <label for="floatingInput">Email address</label>-->
