--- a/templates/admin_temp/add_hostel.html
+++ b/templates/admin_temp/add_hostel.html
@@ -5,7 +5,7 @@
 
                     <div class="col-sm-12 col-xl-6">
                         <div class="bg-light rounded h-10 p-4">
-                            <h6 class="mb-4">Basic Form</h6>
+                            <h6 class="mb-4">Hostel Registration</h6>
                             <form method="post">{% csrf_token %}
                                 <div class="mb-3">
                                     {{form|crispy}}
