--- a/templates/admin_temp/admin_home.html
+++ b/templates/admin_temp/admin_home.html
@@ -120,7 +120,7 @@
                         </i>Attendance Details</a>
                         <div class="dropdown-menu bg-transparent border-0">
                             <a href="{% url 'addattendance' %}" class="dropdown-item">Add Attendance</a>
-                            <a href="typography.html" class="dropdown-item">View Attandence</a>
+                            <a href="{% url 'view_attendances' %}" class="dropdown-item">View Attandence</a>
 <!--                            <a href="element.html" class="dropdown-item">Other Elements</a>-->
                         </div>
                         <div class="nav-item dropdown">
