--- a/templates/admin_temp/student_list.html
+++ b/templates/admin_temp/student_list.html
@@ -28,8 +28,8 @@
                 {% for i in students %}
                 <tr>
                     <th scope="row">{{forloop.counter}}</th>
-                    <td>{{i.student}}</td>
-                    <td><a href="{% url 'mark' %}">mark</a> </td>
+                    <td>{{i.name}}</td>
+                    <td><a href="{% url 'mark' i.user_id %}">mark</a> </td>
 
                 </tr>
 <!--                <tr>-->
