--- a/templates/admin_temp/student_list.html
+++ b/templates/admin_temp/student_list.html
@@ -25,7 +25,7 @@
                 </tr>
                 </thead>
                 <tbody>
-                {% for i in students %}
+                {% for i in student %}
                 <tr>
                     <th scope="row">{{forloop.counter}}</th>
                     <td>{{i.name}}</td>
