--- a/templates/parent_temp/parent_home.html
+++ b/templates/parent_temp/parent_home.html
@@ -102,7 +102,7 @@
                         </i>Student Attendence</a>
                         <div class="dropdown-menu bg-transparent border-0">
 <!--                            <a href="button.html" class="dropdown-item">Add Hostel</a>-->
-                            <a href="typography.html" class="dropdown-item">View Attendence</a>
+                            <a href="{% url 'viewattendance' %}" class="dropdown-item">View Attendence</a>
 <!--                            <a href="element.html" class="dropdown-item">Other Elements</a>-->
                         </div>
                     </div>
