--- a/templates/parent_temp/parent_view_staff.html
+++ b/templates/parent_temp/parent_view_staff.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-{% extends 'admin_temp/admin_home.html' %}
+{% extends 'parent_temp/parent_home.html' %}
 {% block content %}
 {% load static %}
 
@@ -60,5 +60,8 @@
                 {% endfor %}
             </table>
         </div>
+    </div>
+</div>
+
 
 {% endblock %}
