--- a/templates/student_temp/view_profile.html
+++ b/templates/student_temp/view_profile.html
@@ -8,21 +8,20 @@
                             <h6 class="mb-4">Profile</h6>
                              {% for i in profile %}
                     <ul>
-                        <li>Name:{{i.name}}</li>
-                        <li>Address:{{i.address}}</li>
-                        <li>Contact_no:{{i.contact_no}}</li>
-                        <li>Email:{{i.email}}</li>
+                        <li>Name: {{i.name}}</li>
+                        <li>Address: {{i.address}}</li>
+                        <li>Contact_no: {{i.contact_no}}</li>
+                        <li>Email: {{i.email}}</li>
 
                     </ul>
                     {% endfor %}
+                        </div>
 
 
                             <div class="col-sm-10">
-                                <button type="submit" class="btn btn-primary">Update</button>
-                                </div>
-                                </div>
+                                <a href="{% url 'updateprofile' i.id %}"><button type="submit" class="btn btn-primary">Update</button></a>
+                            </div>
                             </form>
                         </div>
-                    </div>
 
 {% endblock %}
