--- a/templates/parent_temp/parent_home.html
+++ b/templates/parent_temp/parent_home.html
@@ -110,7 +110,7 @@
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-th me-2">
                         </i>Delete Account</a>
                         <div class="dropdown-menu bg-transparent border-0">
-<!--                            <a href="button.html" class="dropdown-item">Add Hostel</a>-->
+                            <a href="{% url 'delete_account' %}" class="dropdown-item">Delete Account</a>
 <!--                            <a href="typography.html" class="dropdown-item">View Hostel</a>-->
 <!--                            <a href="element.html" class="dropdown-item">Other Elements</a>-->
                         </div>
