--- a/templates/student_temp/student_home.html
+++ b/templates/student_temp/student_home.html
@@ -84,16 +84,16 @@
                         </i>Room Booking</a>
                         <div class="dropdown-menu bg-transparent border-0">
 <!--                            <a href="button.html" class="dropdown-item">Add Hostel</a>-->
-                            <a href="typography.html" class="dropdown-item">View Complaints</a>
-<!--                            <a href="element.html" class="dropdown-item">Other Elements</a>-->
+                            <a href="{% url 'room_booking' %}" class="dropdown-item">Room Booking</a>
+                            <a href="{% url 'booking_status' %}" class="dropdown-item">Booking Status</a>
                         </div>
                     </div>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-th me-2">
                         </i>Fees Payment</a>
                         <div class="dropdown-menu bg-transparent border-0">
-                            <a href="button.html" class="dropdown-item">Add Fees</a>
-                            <a href="typography.html" class="dropdown-item">View Fees</a>
+<!--                            <a href="button.html" class="dropdown-item">Add Fees</a>-->
+                            <a href="typography.html" class="dropdown-item">Fee Details</a>
 <!--                            <a href="element.html" class="dropdown-item">Other Elements</a>-->
                         </div>
                     </div>
@@ -110,7 +110,7 @@
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-th me-2">
                         </i>Delete Account</a>
                         <div class="dropdown-menu bg-transparent border-0">
-<!--                            <a href="button.html" class="dropdown-item">Add Hostel</a>-->
+                            <a href="{% url 'delete_profile' %}" class="dropdown-item">Delete Profile</a>
 <!--                            <a href="typography.html" class="dropdown-item">View Hostel</a>-->
 <!--                            <a href="element.html" class="dropdown-item">Other Elements</a>-->
                         </div>
